@@ -20,10 +20,12 @@
 #   define _STLP_DONT_POP_HEADER_ID
 # endif
 
+# ifndef _STLP_WCE_EVC3
 # if defined (_STLP_USE_NEW_C_HEADERS) || defined (__IN_STLPORT_CASSERT)
 #  include _STLP_NATIVE_CPP_C_HEADER(cassert)
 # else
 #  include <assert.h>
+# endif
 # endif
 
 # if (_STLP_OUTERMOST_HEADER_ID == 0x103 )
