@@ -21,6 +21,7 @@
 #  include <stl/_prolog.h>
 # endif
 
+# ifndef _STLP_WCE
 # if defined (_STLP_USE_NEW_C_HEADERS)
 #  include _STLP_NATIVE_CPP_C_HEADER(csignal)
 # else
@@ -36,6 +37,7 @@ using _STLP_VENDOR_CSTD::raise;
 using _STLP_VENDOR_CSTD::sig_atomic_t;
 _STLP_END_NAMESPACE
 #  endif /* _STLP_IMPORT_VENDOR_CSTD */
+# endif
 
 # if (_STLP_OUTERMOST_HEADER_ID == 0x112 )
 #  include <stl/_epilog.h>
