@@ -25,6 +25,7 @@
 # include <cctype>
 #endif
 
+# ifndef _STLP_WCE_EVC3
 # if defined (_STLP_USE_NEW_C_HEADERS)
 #  include _STLP_NATIVE_CPP_C_HEADER(cwctype)
 #  if defined  (__MSL__)
@@ -68,6 +69,8 @@ using _STLP_VENDOR_CSTD::towupper;
 #  endif /* _STLP_NO_CSTD_FUNCTION_IMPORTS */
 _STLP_END_NAMESPACE
 #endif /* _STLP_IMPORT_VENDOR_CSTD */
+
+#endif /* _STLP_WCE_EVC3 */
 
 # if (_STLP_OUTERMOST_HEADER_ID == 0x121)
 #  include <stl/_epilog.h>
