@@ -13,6 +13,11 @@
  *
  */
 
+// Workaround for a "misbehaviour" when compiling resource scripts using
+// eMbedded Visual C++. The standard .rc file includes windows header files,
+// which in turn include stdlib.h, which results in warnings and errors
+#if !defined(RC_INVOKED)
+
 # if !defined (_STLP_OUTERMOST_HEADER_ID)
 #  define _STLP_OUTERMOST_HEADER_ID 0x265
 #  include <stl/_prolog.h>
@@ -30,6 +35,8 @@
 #   undef  _STLP_DONT_POP_HEADER_ID
 #  endif
 # endif
+
+#endif /* RC_INVOKED */
 
 // Local Variables:
 // mode:C++
